# email-dispatcher

./: .gitignore  Cargo.toml  readme.md
docs/: dev_setup.md
src/: config.rs  main.rs
src/config/: mod.rs
src/controller/: mod.rs  router.rs  validation.rs
src/controller/dto/: events.rs  input.rs  mod.rs  ses.rs
src/controller/routes/: default.rs  email.rs
src/decoder/: mod.rs
src/decoder/h02/: common.rs  location.rs  mod.rs  msg.rs
src/http/: server.rs
src/mail/: mailer.rs
src/queue/: mod.rs  server.rs
src/server/: h02.rs  mod.rs
src/trace/: mod.rs  tracer.rs
src/utils/: errors.rs
