[package]
name = "mailer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
hex = "0.4"
lapin = "2.1.1"
envy = "0.4"
tokio-stream = "0.1.12"
futures = "0.3.28"
tokio-executor-trait = "2.1.0"
tokio-reactor-trait = "1.1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
opentelemetry = { version = "0.18.0", features = ["rt-tokio", "metrics"] }
opentelemetry-jaeger = { version = "0.17.0", features = ["rt-tokio"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-opentelemetry = "0.18.0"
aws-config = "0.55.1"
aws-sdk-sesv2 = "0.26.0"
validator = { version = "0.16", features = ["derive"] }
